Refactor and check for index out of bounds